Update Spatial Pyramid Matching - Classification - Assignment 1- v2 fully document.ipynb

--- a/Spatial Pyramid Matching - Classification - Assignment 1- v2 fully document.ipynb
+++ b/Spatial Pyramid Matching - Classification - Assignment 1- v2 fully document.ipynb
@@ -154,7 +154,7 @@
     "        labels = []\n",
     "        \n",
     "        # Loop through each file in the folder to be read.\n",
-    "        for batch_id in range(1, 6):\n",
+    "        for batch_id in range(1, 2):\n",
     "            \n",
     "            # Open the file and read the data.\n",
     "            with open('cifar-10-batches-py' + '/data_batch_' + str(batch_id), mode='rb') as file:\n",
@@ -527,9 +527,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "Note That: The training accuracy(13.75%) is terrible and so thet the testing acc is 10%. We \n",
-    "    need to make the model more complex or try another technique. It may also that SPM isn't good for recognition tasks\n",
-    "    as it just cares about the existance of the object not it's location "
+    "Note That: The training accuracy(13.75%) is terrible and so that the testing acc is 10%. The \n",
+    "   model need more enhancement wither by try another approach or add more data.\n",
+    "   "
    ]
   },
   {
